fixed dark mode

--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -50,7 +50,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  background-color: #f5f5f5;
+  background-color: var(--background);
 }
 
 .skillImageContainer {
